CVS - 2.0.1-dev
- Add the ability to generated php_ingres2.dll for windows
- Fixed regression with IIAPI_CP_LOGIN_LOCAL being used at the wrong API level
- Revised PECL_INGRES_VERSION to take in to consideration --enable-ingres2
- Fixed LOB retrieval when used with scollable cursors Ingres 2006 release 3

2.0.0
- Add support for building on OpenVMS
- Initialize value_long_long_str so as not to return a string for all LONG values
- Fix a SEGV when freeing result-sets at different points in the II_LINK list
- Return INTEGER8 values outside the range of LONG_MIN/LONG_MAX as a string
- Restrict UNICODE operations to IIAPI_VERSION_3 or greater
- Init queryParm.qy_flags for Ingres >= 9.2.0 - fix SEGV for database procedure call
- Simplify statement closure
- Return NULL when there is no message, fix SEGV for ingres_error()
- Ingres < 9.2.0 - ingres_query() make select cursor queries read-only too
- Added support for multiple concurrent result-sets
- Added automatic coercion between UTF-8 and UTF-16 
- Added support for Bi-directional scrolling cursors
- Added ingres_free_results() - free the memory associated with a given result set
- Added ingres_autocommit_state() - return the current auto-commit state
- Added ingres_next_error() - fetch additional errors if any

version 1.4.3
- Wait for disconnect to complete to prevent thread terminating uncleanly [grantc 07-03-07]

version 1.4.2
- Use exact value for DECIMAL parameters and not float estimates [05-03-07]
- Use IIapi_abort() to close connections at the request end [grantc 28-02-07]
- Added sample ingres.ini configuration file [grantc 15-02-07]
- Reduced memory usage when putting Long objects into the database [grantc 08-02-07]
- Initialize Ingres OpenAPI once during module startup [grantc 08-02-07]
- Fixed memory leak when fetching column names for row producing procedures [grantc 08-02-07]
- Fixed parameter handling for procedures with Unicode parameters [grantc 08-02-07]