@@ -1,5 +1,7 @@
 CVS - 2.0.1-dev
-- Add the ability to generated php_ingres2.dll for windows
+- Replaced "long long int" with "__int64" to allow the extension to build with VC6
+- Use PZVAL_ISREF instead of pointing at (*val)->is_ref
+- Added --enable-ingres2 to generate php_ingres2.dll for Windows
 - Fixed regression with IIAPI_CP_LOGIN_LOCAL being used at the wrong API level
 - Revised PECL_INGRES_VERSION to take in to consideration --enable-ingres2
 - Fixed LOB retrieval when used with scollable cursors Ingres 2006 release 3
